<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:orientation="vertical"
    android:background="#000"
    >




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"

        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:background="@drawable/border"
            android:text="@string/one_one"
            android:textColor="@color/white"

            android:textSize="15sp"

            android:gravity="center_horizontal|center_vertical"></TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:background="@drawable/border"
            android:text="@string/one_two"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:gravity="center_horizontal|center_vertical"></TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:background="@drawable/border"
            android:text="@string/one_three"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:gravity="center_horizontal|center_vertical"></TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:background="@drawable/border"
            android:text="@string/one_four"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:gravity="center_horizontal|center_vertical"></TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:background="@drawable/border"
            android:text="@string/two_one"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:gravity="center_horizontal|center_vertical"></TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:background="@drawable/border"
            android:text="@string/two_two"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:gravity="center_horizontal|center_vertical"></TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:background="@drawable/border"
            android:text="@string/two_three"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:gravity="center_horizontal|center_vertical"></TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:background="@drawable/border"
            android:text="@string/two_four"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:gravity="center_horizontal|center_vertical"></TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:background="@drawable/border"
            android:text="@string/three_one"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:gravity="center_horizontal|center_vertical"></TextView>
        <TextView
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:background="@drawable/border"
            android:text="@string/three_two"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:gravity="center_horizontal|center_vertical"></TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:background="@drawable/border"
            android:text="@string/three_three"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:gravity="center_horizontal|center_vertical"></TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:background="@drawable/border"
            android:text="@string/three_four"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:gravity="center_horizontal|center_vertical"></TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:background="@drawable/border"
            android:text="@string/four_one"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:gravity="center_horizontal|center_vertical"></TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:background="@drawable/border"
            android:text="@string/four_two"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:gravity="center_horizontal|center_vertical"></TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:background="@drawable/border"
            android:text="@string/four_three"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:gravity="center_horizontal|center_vertical"></TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:background="@drawable/border"
            android:text="@string/four_four"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:gravity="center_horizontal|center_vertical"></TextView>
    </LinearLayout>

</LinearLayout>

